azure/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - my-app.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: my-app.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: my-app-api
          servicePort: 8000
        path: /api/(.*)
      - backend:
          serviceName: my-app-front
          servicePort: 80
        path: /(.*)
